# forge

./: .gitignore  Cargo.toml  README.md
src/: colors.rs  config.rs  installer.rs  kill_process.rs  main.rs  parser.rs  print_banner.rs  runner.rs  spawn_service.rs  watcher.rs
