[package]
name = "fyrer"
version = "0.1.7"
edition = "2024"
authors = ["Calc hello@vinm.me"]
description = "A lightweight tool to run multiple dev servers concurrently"
readme = "README.md"
license = "MIT"
repository = "https://github.com/07calc/fyrer"
keywords = ["dev", "server", "concurrent", "tool"]
categories = ["development-tools"]
exclude = ["/target/*", "*.rs.bk", "*.log", "examples/*"]

[dependencies]
clap = "4.5.50"
clearscreen = "4.0.2"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.228"
serde_yaml = "0.9.34"
tokio = { version = "1.0", features = ["full"] }
notify = "6.1"
nix = "0.30.1"
